--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "amendozaaguiar/laraveles-spanish-for-jetstream": "^1.6",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jeroennoten/laravel-adminlte": "^3.7",
@@ -13,12 +14,10 @@
         "laravel/jetstream": "^2.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-
+        "laravelcollective/html": "^6.2",
         "laraveles/spanish": "^1.5",
         "livewire/livewire": "^2.5",
-        "laravelcollective/html": "^6.2",
         "spatie/laravel-permission": "^5.4"
-
     },
     "require-dev": {
         "facade/ignition": "^2.5",
